# StudentuZurnalas

./: CMakeLists.txt  Libraries.h  Methods.cpp  Methods.h  README.md  SETTINGS.txt  StudentuZ.Veikiantis.cpp  StudentuZ.Veikiantis.sln  StudentuZ.Veikiantis.vcxproj  Studentu_Zurnalas.cpp  Studentu_Zurnalas_Vector_Refactored.cpp  Studentu_Zurnalas_Vector_Refactored.vcxproj  Studentu_Zurnalas_Vector_v0.1.1.cpp  Studentu_Zurnalas_vector_Final.cpp  Testavimas Buferis.xlsx  galvociai.txt  kursiokai.txt  nuskriaustukai.txt  testavimas.xlsx
