# CMakeList.txt : CMake project for CMake studentu zurnalas, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMake studentu zurnalas")

# Add source to this project's executable.
add_executable (CMakeTarget "StudentuZ.Veikiantis.cpp" "Libraries.h" "Methods.h" "Methods.cpp")

# TODO: Add tests and install targets if needed.
